[gd_scene load_steps=14 format=2]

[ext_resource path="res://assests/sprites/bg/1856.jpg" type="Texture" id=1]
[ext_resource path="res://assests/Signup.png" type="Texture" id=2]
[ext_resource path="res://assests/SignUpButt.png" type="Texture" id=3]
[ext_resource path="res://script/SignUpScene.gd" type="Script" id=4]
[ext_resource path="res://assests/S_in.png" type="Texture" id=5]
[ext_resource path="res://Fonts/CooperFiveOpti-Black.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/Kanit-BlackItalic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/Kanit-Black.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 33
font_data = ExtResource( 6 )

[node name="SignUpScene" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 510.495, 330.37 )
scale = Vector2( 0.214399, 0.229449 )
texture = ExtResource( 1 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 519.662, 106.618 )
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 411.415
margin_top = 474.163
margin_right = 684.415
margin_bottom = 572.163
rect_scale = Vector2( 0.837453, 0.837453 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
margin_left = 465.0
margin_top = 210.0
margin_right = 835.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="."]
margin_left = 465.0
margin_top = 275.0
margin_right = 835.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 2 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="LineEdit" parent="."]
margin_left = 465.0
margin_top = 340.0
margin_right = 835.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 3 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
margin_left = 380.566
margin_top = 415.09
margin_right = 668.566
margin_bottom = 460.09
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 632.062
margin_top = 522.801
margin_right = 1325.06
margin_bottom = 882.801
rect_scale = Vector2( 0.215227, 0.215227 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" type="Label" parent="."]
margin_left = 230.0
margin_top = 210.0
margin_right = 442.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PW" type="Label" parent="."]
margin_left = 230.0
margin_top = 275.0
margin_right = 442.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confir" type="Label" parent="."]
margin_left = 230.0
margin_top = 340.0
margin_right = 442.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Confirm:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="have" type="Label" parent="."]
margin_left = 369.865
margin_top = 545.772
margin_right = 714.865
margin_bottom = 592.772
rect_scale = Vector2( 0.75006, 0.75006 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.803922, 0.992157, 0.968627, 1 )
text = "have an account?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
